# plugintest

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  plugintest_macros.h  plugintestui.rc
defaultplugins/: CMakeLists.txt  capitalizeplugin.cpp  capitalizeplugin.h  plugintest_capitalizeplugin.desktop  plugintest_capitalizepluginui.rc
exampleplugin/: CMakeLists.txt  exampleplugin.cpp  exampleplugin.desktop~  exampleplugin.h  examplepluginui.rc  plugintest_exampleplugin.desktop
interface/: CMakeLists.txt  plugin.cpp  plugin.h  pluginloader.cpp  pluginloader.h  plugintest_plugin.desktop
